# matpp

./: CMakeLists.txt  LICENSE  README.md  mat.hpp  test.c
tests/: main.out  test_matpp.cpp
